--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<% flash.each do |name, msg| %>
+  <div data-alert class="alert-box">
+    <%= msg %>
+    <a href="#" class="close">&times;</a>
+  </div>
+<% end %>
+
 <%= yield %>
 
 </body>
