--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <%= link_to "Sign up", new_user_registration_path %>
 <% if current_user %>
   <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+  <%= link_to "Add prompt", new_prompt_path %>
 <% else %>
   <%= link_to "Login", new_user_session_path %>
 <% end %>
