--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,8 +6,13 @@
   <%= link_to "Sign up", new_user_registration_path %>
 <% end %>
 
-<% @prompts.each do |prompt| %>
+<br />
 
-  <%= link_to prompt.text, prompt_path(prompt) %>
-  <br>
+<% @prompts.each do |prompt| %>
+  <% if Vote.where("votable_id = #{prompt.id} AND voter_id = #{current_user.id}").first %>
+    <%= link_to "Unlike", unvote_prompt_path(prompt) %>
+  <% else %>
+    <%= link_to "Like", vote_prompt_path(prompt) %>
+  <% end %>
+  <%= link_to prompt.text, prompt_path(prompt) %><br />
 <% end %>
