--- a/app/views/prompts/show.html.erb
+++ b/app/views/prompts/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @prompt.text %></h1>
-<% @choices.each do |x| %>
-<%= x.text %>
+
+<% @choices.each do |choice| %>
+  <%= choice.text %><br />
 <% end %>
+
 <h2><%= render "./choices/form",prompt:@prompt,choice:@choice %>
