Only logged in users can see choice field on prompt show page. Only logged in users can see vote/unvote buttons.

--- a/app/views/prompts/show.html.erb
+++ b/app/views/prompts/show.html.erb
@@ -4,4 +4,6 @@
   <%= choice.text %><br />
 <% end %>
 
-<h2><%= render "./choices/form",prompt:@prompt,choice:@choice %>
+<% if current_user %>
+  <h2><%= render "./choices/form",prompt:@prompt,choice:@choice %>
+<% end %>
