--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,10 +9,12 @@
 <br />
 
 <% @prompts.each do |prompt| %>
-  <% if Vote.where("votable_id = #{prompt.id} AND voter_id = #{current_user.id}").first %>
-    <%= link_to "Unlike", unvote_prompt_path(prompt) %>
-  <% else %>
-    <%= link_to "Like", vote_prompt_path(prompt) %>
+  <% if current_user %>
+    <% if Vote.where("votable_id = #{prompt.id} AND voter_id = #{current_user.id}").first %>
+      <%= link_to "Unvote", unvote_prompt_path(prompt) %>
+    <% else %>
+      <%= link_to "Vote", vote_prompt_path(prompt) %>
+    <% end %>
   <% end %>
   <%= link_to prompt.text, prompt_path(prompt) %><br />
 <% end %>
