--- a/app/views/prompts/show.html.erb
+++ b/app/views/prompts/show.html.erb
@@ -8,6 +8,7 @@
       <%= link_to "Vote", vote_choice_path(choice) %>
     <% end %>
   <% end %>
+  <%= Vote.where("votable_type = 'Choice' AND votable_id = #{choice.id}").size %>
   <%= choice.text %><br />
 <% end %>
 
