--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= link_to "Self-Govern", root_path %>
+<br>
 <% flash.each do |name, msg| %>
   <div data-alert class="alert-box">
     <%= msg %>
