--- a/app/views/pages/archives_index.html.erb
+++ b/app/views/pages/archives_index.html.erb
@@ -1,3 +1,4 @@
+<h1>Prompt Archives</h1>
 <% if current_user %>
   <%= link_to "Logout", destroy_user_session_path, method: :delete %>
   <%= link_to "Add prompt", new_prompt_path %>
@@ -8,16 +9,7 @@
 
 <br />
 
-<% @prompts.ordered_index_by_popularity.each do |prompt| %>
-  <% if current_user %>
-    <% if current_user.voted_for? prompt %>
-      <%= link_to "Unvote", unvote_prompt_path(prompt) %>
-    <% else %>
-      <%= link_to "Vote", vote_prompt_path(prompt) %>
-    <% end %>
-  <% end %>
+<% @prompts.each do |prompt| %>
   <%= prompt.votes.size %>
   <%= link_to prompt.text, prompt_path(prompt) %><br />
 <% end %>
-<br>
-<%= link_to "Archives Index", archives_index_path %>
