--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for [prompt,comment] do |f| %>
-<%= f.input :text,label:"Comment:" %>
-<%= f.button :submit, 'Submit' %>
+<%= f.input :text, label: false, placeholder: 'Add a comment' %>
+<%= f.button :submit, 'Add Comment', class: 'button small' %>
 <% end %>
