--- a/app/views/pages/archives_index.html.erb
+++ b/app/views/pages/archives_index.html.erb
@@ -1,10 +1,10 @@
 <h1>Prompt Archives</h1>
 <% if current_user %>
-  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-  <%= link_to "Add prompt", new_prompt_path %>
+  <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+  <%= link_to "Add Prompt", new_prompt_path %>
 <% else %>
-  <%= link_to "Login", new_user_session_path %>
-  <%= link_to "Sign up", new_user_registration_path %>
+  <%= link_to "Sign In", new_user_session_path %>
+  <%= link_to "Sign Up", new_user_registration_path %>
 <% end %>
 
 <br />
