--- a/app/views/prompts/new.html.erb
+++ b/app/views/prompts/new.html.erb
@@ -1,19 +1,18 @@
-<%= form_for(@prompt) do |f| %>
-  <% if @prompt.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@prompt.errors.count, "error") %> prohibited this prompt from being saved:</h2>
+<div class="row">
+  <div class="small-3 columns"></div>
+  <div class="small-6 small-centered columns">
+    <h3>New Prompt</h3>
+  </div>
+  <div class="small-3 columns"></div>
+</div>
 
-      <ul>
-      <% @prompt.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <%= f.label :text %><br />
-  <%= f.text_field :text %><br />
-
-  <%= f.submit %>
-
-<% end %>
+<div class="row">
+  <div class="small-3 columns"></div>
+  <div class="small-6 small-centered columns">
+    <%= simple_form_for @prompt do |f| %>
+    <%= f.input :text, label: false, placeholder: 'Enter text for your prompt (300 character limit)', input_html: { maxlength: 300, style:'width: 500px; height:75px;'} %>
+    <%= f.button :submit, 'Add Prompt' %>
+    <% end %>
+  </div>
+  <div class="small-3 columns"></div>
+</div>
