Revert "Merge branch 'foundation' of github.com:justuseapen/self-govern"
This reverts commit b6fbea577eb760a68732b5bdb823f977e15c4697, reversing
changes made to 5d28aca0db52f31b54b6b1393f70ea172ead92cc.

--- a/app/views/choices/_form.html.erb
+++ b/app/views/choices/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for [prompt,choice] do |f| %>
-<%= f.input :text,label: false, placeholder: 'Add a choice' %>
-<%= f.button :submit, 'Add New Choice', class: 'button small'%>
+<%= f.input :text,label:"Choice:" %>
+<%= f.button :submit, 'Add New Choice' %>
 <% end %>
