about links to github readme

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= link_to "Self-Govern", root_path %>
+<%= link_to "Self-Govern", root_path %> // <a href="https://github.com/justuseapen/self-govern/blob/master/README.md">About</a>
 <br>
 <% flash.each do |name, msg| %>
   <div data-alert class="alert-box">
