Specs are green, writing specs for archiving immutable prompts

--- a/app/views/prompts/new.html.erb
+++ b/app/views/prompts/new.html.erb
@@ -13,6 +13,8 @@
 
   <%= f.label :text %><br />
   <%= f.text_field :text %><br />
+  <%= f.label :immutable %>?(Immutable prompts, once passed can never be reversed.)<br />
+  <%= f.check_box :immutable %><br />
 
   <%= f.submit %>
 
