Added display_text to to prompt model to make views more dry

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
     <% end %>
   <% end %>
   <%= prompt.votes.size %>
-<%= link_to "#{prompt.text} #{'[IMMUTABLE]' unless prompt.immutable.blank?}", prompt_path(prompt) %><br />
+  <%= link_to prompt.display_text, prompt_path(prompt) %><br />
 <% end %>
 <br>
 <%= link_to "Archives Index", archives_index_path %>
