--- a/app/views/prompts/show.html.erb
+++ b/app/views/prompts/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @prompt.text %> <% if @prompt.archive? %>(Archived)<% end %></h1>
+<h1><%= @prompt.display_text %> <% if @prompt.archive? %>(Archived)<% end %></h1>
 <% if current_user.curator? %>
   <%= link_to "Delete Prompt", prompt_path(@prompt), method: :delete unless @prompt.archive? %><br>
   <%= link_to "Archive Prompt", archive_prompt_path(@prompt) unless @prompt.archive? %><br>
