--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,7 @@
 <% if current_user %>
-  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-  <%= link_to "Add prompt", new_prompt_path %>
-<% else %>
-  <%= link_to "Login", new_user_session_path %>
-  <%= link_to "Sign up", new_user_registration_path %>
+<%= link_to "Add prompt", new_prompt_path, class: "button" %>
 <% end %>
-
+<br>
 <br />
 
 <% @prompts.ordered_index_by_popularity.each do |prompt| %>
