fixed prompts form, specs all green

--- a/app/views/prompts/new.html.erb
+++ b/app/views/prompts/new.html.erb
@@ -13,8 +13,12 @@
 
   <%= f.label :text %><br />
   <%= f.text_field :text %><br />
-  <%= f.label :immutable %>?(Immutable prompts, once passed can never be reversed.)<br />
-  <%= f.check_box :immutable %><br />
+  <%= f.check_box :immutable %>
+  <%= f.label :immutable?, class: "checkbox inline" %>
+  <br>
+  <br>
+  <p>Immutable prompts, once passed, can <strong>never</strong> be reversed.</p>
+  <br />
 
   <%= f.submit %>
 
