--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
           <%= link_to "Archives Index", archives_index_path %>
         </li>
         <li>
+          <%= link_to "Analytics", analytics_path %>
+        </li>
+        <li>
           <a href="https://github.com/justuseapen/self-govern/blob/master/README.md">About</a>
         </li>
         <% if current_user %>
