Add active users chart

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,8 @@
   </div>
 </div>
 
+<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+
 <% flash.each do |name, msg| %>
   <div data-alert class="alert-box">
     <%= msg %>
