--- a/app/views/pages/analytics.html.erb
+++ b/app/views/pages/analytics.html.erb
@@ -2,4 +2,8 @@
 
 <br />
 
-<h4>Current Users: <%= @count %></h4>
+<h4>Current Users: <%= @count %></h4><br />
+
+<h4>Active Users</h4>
+<%- time_range = 6.days.ago..Time.now %>
+<%= line_chart User.group_by_day(:last_sign_in_at, Time.zone, time_range).count %>
