Fixed ability for normal users to comment

--- a/app/views/pages/analytics.html.erb
+++ b/app/views/pages/analytics.html.erb
@@ -2,7 +2,7 @@
 
 <br />
 
-<h4>Current Users: <%= @count %></h4><br />
+<h4>Registered Users: <%= @count %></h4><br />
 
 <h4>Active Users</h4>
 <%- time_range = 6.days.ago..Time.now %>
