--- a/app/views/prompts/show.html.erb
+++ b/app/views/prompts/show.html.erb
@@ -28,7 +28,12 @@ Posted by: <%= @prompt.user.email %> on <%= @prompt.created_at.strftime("%m/%d/%
 <% end %>
 <br>
 
-<% if current_user.curator? %>
+<% if current_user %>
+  cant_comment = @prompt.archive? || (@prompt.to_do? && !current_user.curator?
+  <h2><%= render "./comments/form",prompt:@prompt,comment:@comment unless cant_comment %></h2>
+<% end %>
+
+<% if current_user.curator %>
   <h2><%= render "./comments/form",prompt:@prompt,comment:@comment unless @prompt.archive? %></h2>
 <% end %>
 <br>
